* Added normal Disqus load when access comment id via url. * Modified admin tab. * Fixed alignment issue.
git-svn-id: https://plugins.svn.wordpress.org/disqus-conditional-load/trunk@988898 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/media/styles/manage.css
+++ b/media/styles/manage.css
@@ -14,6 +14,10 @@ ul#dsq-tabs li {
 	text-align: right;
 }
 
+.nav-tab{
+cursor:pointer;
+}
+
 ul#dsq-tabs {
 	display: block;
 	height: 20px;
